User entity works

--- a/Sher-app/.env
+++ b/Sher-app/.env
@@ -1,2 +1,2 @@
 API_PORT = 5002
-MONGO_URI=mongodb+srv://kkarthik:MongoDB1992@cluster0.yksg0.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://kkarthik:MongoDB1992@cluster0.yksg0.mongodb.net/bellandraDB?retryWrites=true&w=majority
